e2e/dev/istio-demo/usecase/health/prism-conf.yaml
apiVersion: v1
data:
  mock-v1.yaml: |
    openapi: 3.0.3
    info:
      title: MockServer v1
      description: MockServer v1
      version: 1.0.0
    paths:
      '/':
        get:
          responses:
            '503':
              content:
                'text/plain':
                  schema:
                    type: string
                    example: '503 error'
  mock-v2.yaml: |
    openapi: 3.0.3
    info:
      title: MockServer v2
      description: MockServer v2
      version: 2.0.0
    paths:
      '/':
        get:
          responses:
            '200':
              content:
                'text/plain':
                  schema:
                    type: string
                    example: v2
kind: ConfigMap
metadata:
  name: prism-conf
